# UTEK2026

./: .gitignore
backend/: .gitignore  config.example.toml  esp_cam.py  main.py  ocr_main.py  pyproject.toml  recognize.py  server.py  tts.py
camera/: .gitignore  platformio.ini
camera/src/: main.cpp
tts/: server3.py
