[project]
name = "utek2026_backend"
version = "0.1.0"
description = "UTEK 2026 Backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "loguru>=0.7.3",
    "numpy>=2.4.1",
    "openai>=2.15.0",
    "pillow>=12.1.0",
    "requests>=2.32.5",
    "sounddevice>=0.5.3",
    "uvicorn>=0.40.0",
    "websockets>=16.0",
]
